# math-llm

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml  dgx_spark.yaml  dummy_test.yaml
docs/: context_engineering.md
outputs/dummy_test/: trajectory_0.json  trajectory_1.json  trajectory_2.json  trajectory_3.json  trajectory_4.json
outputs/eval/: dummy_results.json
scripts/: benchmark.py  download_data.py  eval_all.py  evaluate.py  quick_test.py  setup_mathlib.sh  train.py
src/math_llm/: __init__.py  __main__.py  cli.py  config.py  data.py  lean_server.py
src/math_llm/agent/: __init__.py  agent.py  context.py  evaluator.py  tools.py  trajectory.py
src/math_llm/agents/: __init__.py  simple.py  tool.py
src/math_llm/data/: __init__.py  datasets.py  loaders.py  sources.py
src/math_llm/lean/: __init__.py  executor.py  server.py
src/math_llm/models/: __init__.py  llm.py
src/math_llm/training/: __init__.py  rewards.py  trainer.py
tests/: __init__.py  test_basic.py
