[tool.poetry]
name = "math-llm"
version = "0.1.0"
description = "LLM Agent for Lean Theorem Proving with RL Training"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "math_llm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = "^2.9.0"
# Use latest transformers with tokenizers that has Python 3.13 wheels
transformers = "^4.47.0"
tokenizers = ">=0.21.0"  # 0.21+ has Python 3.13 wheels
datasets = "^3.2.0"
trl = "^0.13.0"
accelerate = "^1.2.0"
peft = "^0.14.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
pydantic = "^2.5.0"
httpx = "^0.26.0"
aiohttp = "^3.9.0"
rich = "^13.7.0"
wandb = "^0.19.0"
huggingface-hub = "^0.27.0"
safetensors = "^0.4.0"
pexpect = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
math-llm-train = "math_llm.cli:train"
math-llm-eval = "math_llm.cli:evaluate"
math-llm-download = "math_llm.cli:download_data"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true