[tool.poetry]
name = "math-llm"
version = "0.1.0"
description = "Simple benchmark for LLM agents on Lean 4 theorem proving"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "math_llm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = "^2.0.0"
transformers = "^4.40.0"
accelerate = "^0.26.0"
datasets = "^2.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
lean-bench = "math_llm.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
